<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/date"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtWeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtWeight"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/weight"
                android:textSize="16sp"
                android:layout_marginStart="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtHeight"
                app:layout_constraintStart_toEndOf="@+id/txtDate"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtHeight"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/height"
                android:textSize="16sp"
                android:layout_marginStart="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtValue"
                app:layout_constraintStart_toEndOf="@+id/txtWeight"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/txtValue"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/bmi"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtType"
                app:layout_constraintStart_toEndOf="@+id/txtHeight"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtType"
                android:layout_width="95dp"
                android:layout_height="25dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/type"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtValue"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </TableLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="625dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="40dp">
    </ListView>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/colorAccent"
        android:text="@string/delete"
        android:textColor="@color/colorPrimaryDark"/>
</RelativeLayout>